<resources>
    <string name="app_name">Crazy Qwerty</string>
    <string name="play">Play</string>
    <string name="level_prompt">Choose a Level</string>
    <string-array name="levels">
        <item>None</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Insane</item>
    </string-array>

    <string name="key_vibration_name">ans_vibrate</string>
    <string name="title_vibration">Answer Vibrations</string>
    <string name="summary_default_vibration">Enable Vibrations for wrong answers</string>

    <string name="key_key_vibes">key_vibrate</string>
    <string name="title_key_vibes">Keyboard Vibrations</string>
    <string name="summary_key_vibes">Enable Keyboard Vibrations for each keypress</string>

    <string name="title_correct_sound">Sounds</string>
    <string name="summary_correct_sound">Enable the correct word sound</string>
    <string name="title_upload_quality">Upload Quality</string>

    <string name="title_visible_keys">Visible Keys</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="visible_keys">Visible Keyboard</string>

    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_game">In-Game</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">3.5</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="correct_sound">key_upload_over_wifi</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_send_feedback">key_send_feedback</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string-array name="pref_upload_quality_entries">
        <item>360p</item>
        <item>480p</item>
        <item>720p</item>
        <item>1080p</item>
        <item>Original</item>
    </string-array>
    <string-array name="pref_upload_quality_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

</resources>
